src/test/ui/feature-gate-overlapping_marker_traits.stderr
error[E0119]: conflicting implementations of trait `MyMarker`:
  --> $DIR/feature-gate-overlapping_marker_traits.rs:16:1
   |
LL | impl<T: Display> MyMarker for T {}
   | ------------------------------- first implementation here
LL | impl<T: Debug> MyMarker for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0119"
